Uploaded image for project: 'Mesos'
  1. Mesos
  2. MESOS-8594

Mesos master stack overflow in libprocess socket send loop.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • 1.3.2, 1.4.1, 1.5.0, 1.6.0
    • 1.5.1, 1.6.0
    • master
    • Mesosphere Sprint 79
    • 1

    Description

      Mesos master crashes under load. Attached are some infos from the `lldb`:

      Process 41933 resuming
      Process 41933 stopped
      * thread #10, stop reason = EXC_BAD_ACCESS (code=2, address=0x7000089ecff8)
      frame #0: 0x000000010c30ddb6 libmesos-1.6.0.dylib`::_Some() at some.hpp:35
      32 template <typename T>
      33 struct _Some
      34 {
      -> 35 _Some(T _t) : t(std::move(_t)) {}
      36
      37 T t;
      38 };
      Target 0: (mesos-master) stopped.
      (lldb)
      

      To quote abudnik

      it’s the stack overflow bug in libprocess due to the way `internal::send()` and `internal::_send()` are implemented in `process.cpp`

      Attachments

        1. lldb-regiser-read.txt
          0.9 kB
          A. Dukhovniy
        2. lldb-image-section.txt
          672 kB
          A. Dukhovniy
        3. lldb-di-f.txt
          0.9 kB
          A. Dukhovniy
        4. lldb-bt.txt
          638 kB
          A. Dukhovniy

        Issue Links

          Activity

            People

              bmahler Benjamin Mahler
              zen-dog A. Dukhovniy
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: